fixed mobile center align

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,6 +22,8 @@
 .header__logo img {
   width: 120px;
   height: auto;
+  position: relative;
+  left: -5px;
 }
 
 .header__options {
