--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,5 +1,7 @@
 .intro {
   display: flex;
+  margin-bottom: 150px;
+  box-sizing: border-box;
 }
 
 .intro__image {
@@ -8,7 +10,7 @@
 .intro__main {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   padding-left: 2rem;
   background-image: url("../../images/pexels-cottonbro-5081968.png"),
@@ -18,7 +20,6 @@
   background-repeat: no-repeat;
   min-height: calc(100vh - 50px);
   box-sizing: border-box;
-  padding-top: 50px;
   padding-right: 10px;
 }
 
